[project]
name = "route-master"
version = "0.1.0"
description = "A simple software"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-environ>=0.11.2",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]
